Quick fix for div-overflow

--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,8 @@
 	margin-top: 2px;
 
 	text-align: center;
+
+	overflow: auto;
 }
 
 #alignment_output {
